--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -1,31 +1,239 @@
 {{define "base"}}
-    <!doctype html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+      <title>Mmy nice page</title>
+      
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css">
+      <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+      <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
 
-        {{block "css" .}}
+  </head>
 
-        {{end}}
-    </head>
-    <body>
+  <body>
+
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Rooms
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/generals-quaters">General's Quarters</a></li>
+                <li><a class="dropdown-item" href="/majors-suite">Major's suite</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/search-availability" tabindex="-1" aria-disabled="true">Book now</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact" tabindex="-1" aria-disabled="true">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     {{block "content" .}}
 
     {{end}}
 
 
-    {{block "js" .}}
 
-    {{end}}
+    <footer class="my-footer">
+      <div class="row">
+          <div class="col">
+              left
+          </div>
 
-    </body>
-    </html>
+          <div class="col">
+              center
+          </div>
+
+          <div class="col">
+              right
+          </div>
+      </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
+          integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" 
+          integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js"></script>
+  <script src="https://unpkg.com/notie"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+  
+  {{block "js" .}}
+
+  {{end}}
+
+
+  <script>
+    let attention = Prompt();
+
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+      'use strict'
+
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      let forms = document.querySelectorAll('.needs-validation')
+
+      // Loop over them and prevent submission
+      Array.prototype.slice.call(forms)
+        .forEach(function (form) {
+          form.addEventListener('submit', function (event) {
+            if (!form.checkValidity()) {
+              event.preventDefault()
+              event.stopPropagation()
+            }
+
+            form.classList.add('was-validated')
+          }, false)
+        })
+    })()
+
+
+
+    function notify(msg, msgType) {
+      notie.alert({
+          type: msgType,
+          text: msg,
+    })
+    }
+
+    function notifyMod(title, text, icon, confirmButtonText) {
+      Swal.fire({
+        title: title,
+        html: text,
+        icon: icon,
+        showCancelButton: false,
+        confirmButtonText: confirmButtonText
+      })
+    }
+
+    function Prompt() {
+      let toast = function(c) {
+
+        const {
+            msg = "",
+            icon = "success",
+            position = "top-end",
+        } = c;
+
+        const Toast = Swal.mixin({
+            toast: true,
+            title: msg,
+            position: position,
+            icon: icon,          
+            showConfirmButton: false,
+            timer: 3000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+              toast.addEventListener('mouseenter', Swal.stopTimer)
+              toast.addEventListener('mouseleave', Swal.resumeTimer)
+            }
+          })
+
+          Toast.fire({})
+      }
+      let success = function(c) {
+
+        const {
+          msg = "",
+          title = "",
+          footer = "",
+        } = c;
+
+        Swal.fire({
+            icon: 'success',
+            title: title,
+            text: msg,
+            footer: footer
+          })
+      }
+
+      let error = function(c) {
+        const {
+          msg = "",
+          title = "",
+          footer = "",
+        } = c;
+        Swal.fire({
+            icon: 'error',
+            title: title,
+            text: msg,
+            footer: footer
+          })
+        }
+
+       async function custom(c) {
+          const {
+            msg = "",
+            title = "",
+          } = c;
+
+          const { value: formValues } = await Swal.fire({
+              title: title,
+              html: msg,
+              backdrop: false,
+              focusConfirm: false,
+              showCancelButton: true,
+              willOpen: () => {
+                const elem = document.getElementById('reservation-dates-modal');
+                const rp = new DateRangePicker(elem, {
+                  format: 'yyyy-mm-dd',
+                  showOnFocus: true,
+                })
+              }, 
+              preConfirm: () => {
+                return [
+                  document.getElementById('start').value,
+                  document.getElementById('end').value
+                ]
+              },
+              didOpen: () => {
+                document.getElementById('start').removeAttribute('disabled');
+                document.getElementById('end').removeAttribute('disabled');
+              }
+          })
+
+          if (formValues) {
+            Swal.fire(JSON.stringify(formValues)) 
+          }
+        }
+
+      return{
+        toast: toast,
+        success: success,
+        error: error,
+        custom: custom,
+      }
+    }
+
+
+  </script>
+
+  </body>
+
+</html>
 {{end}}
