--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -1,12 +1,71 @@
 {{template "base" .}}
 
 {{define "content"}}
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>This is the home page</h1>
-                <p>This is some text</p>
-            </div>
-        </div>
+
+<div id="main-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#main-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+
+    <div class="carousel-inner">
+      
+     <div class="carousel-item active">
+      <img src="/static/images/house.jpg" class="d-block w-100" alt="Main view">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
     </div>
+
+    <div class="carousel-item">
+      <img src="/static/images/fireplace.jpg" class="d-block w-100" alt="fireplace">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="/static/images/bedrrom.jpg" class="d-block w-100" alt="bedroom">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    
+  </div>
+</div>
+
+<div class="container">
+
+
+  <div class="row">
+    <div class="col">
+      <h1 class="text-center mt-4">Welcome to Le Fort, Gîte de passant!</h1>
+      <p>
+        Whatever it must be saying.There are more things in heaven and earth, Horatio, than are dreamt of in your philosophy
+        There are more things in heaven and earth, Horatio, than are dreamt of in your philosophy
+        There are more things in heaven and earth, Horatio, than are dreamt of in your philosophy
+        There are more things in heaven and earth, Horatio, than are dreamt of in your philosophy
+        There are more things in heaven and earth, Horatio, than are dreamt of in your philosophy
+        There are more things in heaven and earth, Horatio, than are dreamt of in your philosophy
+        There are more things in heaven and earth, Horatio, than are dreamt of in your philosophy
+      </p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col text-center">
+
+      <a href="/search-availability" class="btn btn-success">Make Reservation now</a>
+
+    </div>
+  </div>
+
+</div> 
+
+
 {{end}}
